# sise_ws

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: approval_key.json  deal_tm.json  holiday.csv  nxt_component_stock.csv  sise_stock_list.csv
data/: preday_result.csv
data/base/: macro_risk.csv  macro_risk.json
data/krx/backup/2026-04-24/: 069500_20260424.csv  229200_20260424.csv  278530_20260424.csv  292150_20260424.csv  379800_20260424.csv  379810_20260424.csv  458730_20260424.csv  465580_20260424.csv
data/krx/backup/2026-04-27/: 069500_20260427.csv  229200_20260427.csv  278530_20260427.csv  292150_20260427.csv  379800_20260427.csv  379810_20260427.csv  458730_20260427.csv  465580_20260427.csv
data/krx/backup/2026-04-28/: 069500_20260428.csv  229200_20260428.csv  278530_20260428.csv  292150_20260428.csv  379800_20260428.csv  379810_20260428.csv  458730_20260428.csv  465580_20260428.csv
data/krx/backup/2026-04-29/: 069500_20260429.csv  229200_20260429.csv  278530_20260429.csv  292150_20260429.csv  379800_20260429.csv  379810_20260429.csv  458730_20260429.csv  465580_20260429.csv
data/krx/backup/2026-04-30/: 069500_20260430.csv  229200_20260430.csv  278530_20260430.csv  292150_20260430.csv  379800_20260430.csv  379810_20260430.csv  458730_20260430.csv  465580_20260430.csv
scratch/: check_schedule_logic.py
src/sise_ws/: __init__.py  approval.py  cli.py  config.py  ingest.py  main.py  market.py  paths.py  portfolio.py  preday.py  scheduler.py  storage.py  stream.py
(+67 files in other folders)
